[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resiliencepy"
version = "0.1.0"
description = "A recovery-centric, metric-standardized Python core for supply chain resilience modeling."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Ramakrishna Garine"}]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["resiliencepy*"]
